--- a/build.xml
+++ b/build.xml
@@ -26,6 +26,7 @@
             <fileset dir=".">
                 <include name="*.*"/>
                 <include name="resources/**"/>
+                <include name="shared/**"/>
                 <exclude name=".git*"/>
             </fileset>
         </zip>
