Increment version number. Add dependency on eXist trunk.

--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project basedir="." default="all" name="shared-resources">
     <property name="app.name" value="shared-resources"/>
-    <property name="app.version" value="0.2.6"/>
+    <property name="app.version" value="0.2.8"/>
     <property name="tools" value="./tools"/>
     <property name="build" value="./build"/>
     <property name="scripts" value="./resources/scripts"/>
@@ -12,8 +12,7 @@
     <target name="ace">
         <mkdir dir="${ace}"/>
         <copy todir="${ace}">
-            <fileset dir="${ace.src}/build/src-min">
-            </fileset>
+            <fileset dir="${ace.src}/build/src-min"/>
         </copy>
     </target>
     <target name="clean">
