--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project basedir="." default="all" name="shared-resources">
     <property name="app.name" value="shared-resources"/>
-    <property name="app.version" value="0.2.9"/>
+    <property name="app.version" value="0.3.0"/>
     <property name="tools" value="./tools"/>
     <property name="build" value="./build"/>
     <property name="scripts" value="./resources/scripts"/>
@@ -25,7 +25,7 @@
             <fileset dir=".">
                 <include name="*.*"/>
                 <include name="resources/**"/>
-                <include name="shared/**"/>
+                <include name="content/**"/>
                 <exclude name=".git*"/>
             </fileset>
         </zip>
