--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project basedir="." default="all" name="shared-resources">
-    <property name="app.name" value="shared-resources"/>
-    <property name="app.version" value="0.3.0"/>
+    <property name="project.app" value="shared-resources"/>
+    <property name="project.version" value="0.3.3"/>
     <property name="tools" value="./tools"/>
     <property name="build" value="./build"/>
     <property name="scripts" value="./resources/scripts"/>
@@ -31,17 +31,25 @@
     <target name="clean">
         <delete dir="${ace}"/>
         <delete dir="${build}"/>
+        <delete file="expath-pkg.xml"/>
     </target>
 
     <target name="xar">
         <mkdir dir="${build}"/>
-        <zip destfile="${build}/${app.name}-${app.version}${git.commit}.xar">
+	<copy file="expath-pkg.xml.tmpl" tofile="expath-pkg.xml" filtering="true" overwrite="true">
+	<filterset>
+          <filter token="project.version" value="${project.version}"/>
+	</filterset>
+	</copy>
+        <zip destfile="${build}/${project.app}-${project.version}${git.commit}.xar">
             <fileset dir=".">
                 <include name="*.*"/>
                 <include name="resources/**"/>
                 <include name="content/**"/>
                 <exclude name=".git*"/>
-            </fileset>
+                <exclude name="*.tmpl"/>
+                <exclude name="*.properties"/>
+         </fileset>
         </zip>
     </target>
     <target name="upload">
