--- a/build.xml
+++ b/build.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project basedir="." default="all" name="shared-resources">
     <property name="project.app" value="shared-resources"/>
-    <property name="project.version" value="0.3.3"/>
+    <property name="project.version" value="0.3.5"/>
     <property name="tools" value="./tools"/>
     <property name="build" value="./build"/>
     <property name="scripts" value="./resources/scripts"/>
     <property name="ace" value="${scripts}/ace"/>
     <property name="ace.src" value="./support/ace"/>
     <property name="server.url" value="http://demo.exist-db.org/exist/apps/public-repo/public/"/>
-
     <condition property="git.commit" value="${git.commit}" else="">
-      <isset property="git.commit" />      
+        <isset property="git.commit"/>
     </condition>
-
     <target name="all" depends="ace,xar"/>
-
     <target name="rebuild" depends="clean,all"/>
-
     <target name="ace">
         <mkdir dir="${ace}"/>
         <copy todir="${ace}">
@@ -27,20 +23,18 @@
             </fileset>
         </copy>
     </target>
-
     <target name="clean">
         <delete dir="${ace}"/>
         <delete dir="${build}"/>
         <delete file="expath-pkg.xml"/>
     </target>
-
     <target name="xar">
         <mkdir dir="${build}"/>
-	<copy file="expath-pkg.xml.tmpl" tofile="expath-pkg.xml" filtering="true" overwrite="true">
-	<filterset>
-          <filter token="project.version" value="${project.version}"/>
-	</filterset>
-	</copy>
+        <copy file="expath-pkg.xml.tmpl" tofile="expath-pkg.xml" filtering="true" overwrite="true">
+            <filterset>
+                <filter token="project.version" value="${project.version}"/>
+            </filterset>
+        </copy>
         <zip destfile="${build}/${project.app}-${project.version}${git.commit}.xar">
             <fileset dir=".">
                 <include name="*.*"/>
@@ -49,14 +43,14 @@
                 <exclude name=".git*"/>
                 <exclude name="*.tmpl"/>
                 <exclude name="*.properties"/>
-         </fileset>
+            </fileset>
         </zip>
     </target>
     <target name="upload">
         <input message="Enter password:" addproperty="server.pass" defaultvalue="">
             <handler type="secure"/>
         </input>
-        <property name="xar" value="${app.name}-${app.version}.xar"/>
+        <property name="xar" value="${project.app}-${project.version}${git.commit}.xar"/>
         <exec executable="curl">
             <arg line="-T ${build}/${xar} -u admin:${server.pass} ${server.url}/${xar}"/>
         </exec>
