--- a/build.xml
+++ b/build.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project basedir="." default="all" name="shared-resources">
     <property name="project.app" value="shared-resources"/>
-    <property name="project.version" value="0.3.8"/>
+    <property name="project.version" value="0.3.9"/>
     <property name="tools" value="./tools"/>
     <property name="build" value="./build"/>
     <property name="scripts" value="./resources/scripts"/>
     <property name="ace" value="${scripts}/ace"/>
     <property name="ace.src" value="./support/ace"/>
     <property name="server.url" value="http://demo.exist-db.org/exist/apps/public-repo/public/"/>
+    <property name="emmet.url" value="https://nightwing.github.io/emmet-core/emmet.js"/>
     <condition property="git.commit" value="${git.commit}" else="">
         <isset property="git.commit"/>
     </condition>
     <target name="all" depends="ace,xar"/>
     <target name="rebuild" depends="clean,all"/>
-    <target name="ace">
+    <target name="prepare-ace">
+        <get src="${emmet.url}" dest="${ace}"/>
+    </target>
+    <target name="ace" depends="prepare-ace">
         <mkdir dir="${ace}"/>
         <copy todir="${ace}">
             <fileset dir="${ace.src}/build/src-min"/>
