--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project basedir="." default="all" name="shared-resources">
     <property name="project.app" value="shared-resources"/>
-    <property name="project.version" value="0.3.9"/>
+    <property name="project.version" value="0.4.0"/>
     <property name="tools" value="./tools"/>
     <property name="build" value="./build"/>
     <property name="scripts" value="./resources/scripts"/>
@@ -13,9 +13,9 @@
         <isset property="git.commit"/>
     </condition>
     <target name="all" depends="ace,xar"/>
-    <target name="rebuild" depends="clean,all"/>
+    <target     name="rebuild" depends="clean,all"/>
     <target name="prepare-ace">
-        <get src="${emmet.url}" dest="${ace}"/>
+        <get src="${emmet.url}" dest="${scripts}/emmet.js"/>
     </target>
     <target name="ace" depends="prepare-ace">
         <mkdir dir="${ace}"/>
