Delete emmet.js during “clean”
confirmed that ant clean performs all steps that git clean -xdf would have performed.

--- a/build.xml
+++ b/build.xml
@@ -31,6 +31,7 @@
     </target>
     <target name="clean">
         <delete dir="${ace}"/>
+        <delete file="${scripts}/emmet.js"/>
         <delete dir="${build}"/>
         <delete file="expath-pkg.xml"/>
     </target>
