Restore “abbrev”, not same as “app name”
See https://github.com/eXist-db/shared-resources/issues/36.

--- a/build.properties
+++ b/build.properties
@@ -3,5 +3,10 @@
 # edit that.
 #
 
-project.name=shared-resources
-project.version=0.8.0
+# Do not modify these properties, or risk breaking package managers.
+project.abbrev=shared
+project.app=shared-resources
+project.name=http://exist-db.org/apps/shared
+
+# These properties can be changed.
+project.version=0.8.1
