--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,6 @@
 <project basedir="." default="all" name="shared-resources">
     <property file="local.build.properties"/>
     <property file="build.properties"/>
-    <property name="tools" value="./tools"/>
     <property name="build" value="./build"/>
     <property name="scripts" value="./resources/scripts"/>
     <property name="ace" value="${scripts}/ace"/>
@@ -40,10 +39,11 @@
         <copy file="expath-pkg.xml.tmpl" tofile="expath-pkg.xml" filtering="true" overwrite="true">
             <filterset>
                 <filter token="project.name" value="${project.name}"/>
+                <filter token="project.abbrev" value="${project.abbrev}"/>
                 <filter token="project.version" value="${project.version}"/>
             </filterset>
         </copy>
-        <zip destfile="${build}/${project.name}-${project.version}${git.commit}.xar">
+        <zip destfile="${build}/${project.app}-${project.version}${git.commit}.xar">
             <fileset dir=".">
                 <include name="*.*"/>
                 <include name="resources/**"/>
@@ -58,7 +58,7 @@
         <input message="Enter password:" addproperty="server.pass" defaultvalue="">
             <handler type="secure"/>
         </input>
-        <property name="xar" value="${project.name}-${project.version}${git.commit}.xar"/>
+        <property name="xar" value="${project.app}-${project.version}${git.commit}.xar"/>
         <exec executable="curl">
             <arg line="-T ${build}/${xar} -u admin:${server.pass} ${server.url}/${xar}"/>
         </exec>
